--- a/templates/issues.html
+++ b/templates/issues.html
@@ -76,6 +76,10 @@
                     </dl>
                 {% endfor %}
 
+                <ul class="pagination">
+                    {{ pagination_html|safe }}
+                </ul>
+
 
             </div>
         </div>
