--- a/templates/issues.html
+++ b/templates/issues.html
@@ -31,6 +31,10 @@
             width: 70%;
         }
 
+        #filter a {
+            margin-right: 10px;
+        }
+
 
     </style>
     <link rel="stylesheet" href="{% static 'plugin/editor-md/css/editormd.css' %}">
@@ -48,8 +52,18 @@
                     <i class="fa fa-search" aria-hidden="true"></i> 筛选
                 </h3>
             </div>
-            <div class="panel-body">
-                筛选条件
+            <div class="panel-body" id="filter">
+                {% for foo in status_filter %}
+                    {{ foo }}
+                {% endfor %}
+                <hr>
+                {% for foo in priority_filter %}
+                    {{ foo }}
+                {% endfor %}
+                <hr>
+                {% for foo in issues_type_filter %}
+                    {{ foo }}
+                {% endfor %}
             </div>
         </div>
 
