--- a/templates/issues.html
+++ b/templates/issues.html
@@ -256,26 +256,26 @@
                     <h4 class="modal-title" id="myModalLabel">邀请成员</h4>
                 </div>
                 <div class="modal-body clearfix">
-
-                    {% for field in invite_form %}
-                        <div class="form-group clearfix">
-                            <label for="{{ field.id_for_label }}"
-                                   class="col-sm-2 control-label">{{ field.label }}</label>
-                            <div class="col-sm-10">
-                                {{ field }}
-                                <div class="error"></div>
+                    <form id="inviteForm">
+                        {% for field in invite_form %}
+                            <div class="form-group clearfix">
+                                <label for="{{ field.id_for_label }}"
+                                       class="col-sm-2 control-label">{{ field.label }}</label>
+                                <div class="col-sm-10">
+                                    {{ field }}
+                                    <div class="error"></div>
+                                </div>
                             </div>
-                        </div>
-                    {% endfor %}
-
+                        {% endfor %}
+                    </form>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary">生成邀请链接</button>
+                    <button type="button" class="btn btn-primary" id="createInvite">生成邀请链接</button>
                 </div>
 
-                <div class="form-group hide">
+                <div class="form-group hide" id="invite_input">
                     <div class="col-lg-6">
                         <div class="input-group">
                             <span class="input-group-btn">
@@ -283,7 +283,7 @@
                         </span>
                             <input type="text" class="form-control">
                             <span class="input-group-btn">
-                            <button class="btn btn-info" type="button">复制</button>
+                            <button class="btn btn-info" type="button" id="copy-btn">复制</button>
                         </span>
                         </div><!-- /input-group -->
                     </div><!-- /.col-lg-6 -->
@@ -309,6 +309,8 @@
             initDateTimePicker();
             bindFilter()
             initSelect2()
+            createInvite()
+            bindCopyBtn()
         })
 
         /**
@@ -392,7 +394,9 @@
             })
         }
 
-
+        /**
+         * 初始化 select2 插件 并绑定事件
+         */
         function initSelect2() {
             $(".c1").select2().on("select2:select", function (e) {
                 console.log("选中了", e.params.data.id)
@@ -403,6 +407,46 @@
             })
         }
 
+        /**
+         * 创建邀请链接
+         */
+        function createInvite() {
+            $("#createInvite").click(function () {
+                $(".error").empty()
+                $.ajax({
+                    url: "{% url 'web:invite' project_id=project_id %}",
+                    type: "post",
+                    data: $("#inviteForm").serialize(),
+                    dataType: "json",
+                    success: function (res) {
+                        if (res.status) {
+                            // 获取后端生成的邀请链接 绑定到页面
+                            $("#invite_input").find(":input").val(res.invite_url)
+                            // 显示 被隐藏的文本域
+                            $("#invite_input").removeClass("hide")
+                        } else {
+                            $.each(res.errors, function (k, v) {
+                                $("id_" + k).next().text(v[0])
+                            })
+                        }
+
+                    }
+                })
+            })
+        }
+
+        /**
+         * 复制邀请链接
+         */
+        function bindCopyBtn() {
+            $("#copy-btn").click(function () {
+                input_elem = $("#invite_input").find(":input")[1]
+                input_elem.select()
+                document.execCommand("copy"); // 执行浏览器复制命令
+                alert("复制成功");
+
+            })
+        }
     </script>
 
 {% endblock js %}
